# makedir

./: Cargo.toml  LICENSE  README.md  install.sh
Formula/: makedir.rb
src/: main.rs
tests/: flag_parsing_test.rs  makedir_tests.rs  verbose_feature_tests.rs
