[package]
name = "makedir"
version = "0.2.0"
edition = "2021"
authors = ["soup-ms <michaelsousajr@gmail.com>"]
description = "A better mkdir command with project setup automation."
license = "MIT"
repository = "https://github.com/soup-ms/makedir"
readme = "README.md"
keywords = ["mkdir", "directory", "automation", "cli"]
categories = ["command-line-utilities"]
exclude = ["tests"]

[dependencies]

[dev-dependencies]

[[bin]]
name = "makedir"
path = "src/main.rs"
